<resources>

    <string name="app_name">우리만의 리그</string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>


    <!-- Sign Up -->
    <string name="signup_name">이름</string>
    <string name="signup_id">아이디</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_pw_confirm">비밀번호 확인</string>
    <string name="signup_school">학교</string>
    <string name="signup_class">반</string>
    <string name="signup_grade">학년</string>
    <string name="signup_ok">가입</string>

    <!-- Main -->
    <string name="create_league_button">경기 생성</string>
    <string name="show_ranking_button">랭킹 보기</string>

    <string name="member_n">인원 수 설정</string>
</resources>
