<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="d3s.team_four.our.league.Activity.LoginActivity"
    android:orientation="horizontal"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_id"
            />

        <EditText
            android:id="@+id/pw"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:layout_below="@id/id"
            android:paddingTop="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/login_button"
            android:layout_below="@id/pw"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />

    </RelativeLayout>



</RelativeLayout>
